cloud-infra-macros/tests/fails/receive_message_wait_time_boundary_high.stderr
error: value should be at most 20
 --> tests/fails/receive_message_wait_time_boundary_high.rs:4:48
  |
4 |     let wait_time = receive_message_wait_time!(21);
  |                                                ^^
